--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
-  text-align: center;
+  max-width: 1024px;
+  margin: 0 auto;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.incompleteArea {
+  background-color: #f4f0e6;
+  margin: 24px 0 0 0;
+  padding: 12px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.completeArea {
+  background-color: #ceefe4;
+  margin: 24px 0 0 0;
+  padding: 12px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.selectBox {
+  padding: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.form {
+  margin: 24px 0 0 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form input {
+  margin: 0 8px 0 0;
+  padding: 8px;
+}
+
+.form button {
+  padding: 8px;
 }
